tests/good/27_negative_numbers.src
# Test: Negative numbers
void main([string] args) {
    int x = -42;
    print_int(x);
}
