tests/bad/04_keyword_as_var.src
# Test: Invalid identifier (keyword)
void main([string] args) {
    int if = 42;  # 'if' is a keyword
    return if;
}
